[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nadfun-sdk"
version = "0.1.0"
description = "Simple blockchain SDK for Nadfun DEX & Bonding Curve"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0" }
authors = [
  { name = "Nadfun", email = "" }
]
dependencies = [
  "web3>=6.0.0",
  "eth-account>=0.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nadfun_sdk.abis" = ["*.json"]
